--- a/ddp/docker-compose.yml
+++ b/ddp/docker-compose.yml
@@ -4,17 +4,11 @@ services:
     image: postgres
   web:
     build: .
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
       - "8000:8000"
     depends_on:
-       - db
-    links:
-        - db:db
-    networks:
-        - djangonetwork
-
-networks:
-  djangonetwork:
-      driver: bridge
+      - db
+      
