Added uwsgi and nginx config

--- a/ddp/Dockerfile
+++ b/ddp/Dockerfile
@@ -3,5 +3,7 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /code
 COPY . ./
+COPY ./config/uwsgi/uwsgi.ini /etc/
 
 RUN pip install -r requirements.txt
+CMD ["uwsgi", "--ini", "/config/uwsgi.ini"]
