--- a/ddp/requirements.txt
+++ b/ddp/requirements.txt
@@ -1,5 +1,43 @@
 asgiref==3.2.10
+astroid==2.4.2
+attrs==19.3.0
+bcrypt==3.1.7
+cached-property==1.5.1
+certifi==2020.6.20
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.9.2
+distro==1.5.0
 Django==3.0.8
+docker==4.2.2
+docker-compose==1.26.2
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
+idna==2.10
+importlib-metadata==1.7.0
+isort==4.3.21
+jsonschema==2.6.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+paramiko==2.7.1
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
+pycparser==2.20
+pylint==2.5.3
+PyNaCl==1.4.0
+pyrsistent==0.16.0
+python-dotenv==0.14.0
 pytz==2020.1
+PyYAML==3.13
+requests==2.24.0
+six==1.15.0
 sqlparse==0.3.1
+texttable==1.6.2
+toml==0.10.1
+typed-ast==1.4.1
+urllib3==1.25.9
+uWSGI==2.0.19.1
+websocket-client==0.57.0
+wrapt==1.12.1
+zipp==3.1.0
